# axum_demo

./: Cargo.toml  net.http  test.db  user.sql
src/: main.rs
src/database/: database.rs
src/handler/: mod.rs  user.rs
src/model/: mod.rs  user.rs
src/router/: mod.rs  router.rs
