[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*" }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tracing = "*"
tracing-subscriber = {version = "*", features = ["env-filter"]}
sqlx = { version = "0.6", features = [ "sqlite", "runtime-tokio-rustls" ] }

